--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -55,6 +55,7 @@ div.caixaFilmes{
     justify-content: space-around;
     flex-wrap: wrap;
     margin: 0 20px;
+    margin-bottom: 75px;
 }
 
 div.capaFilme{
@@ -84,7 +85,7 @@ div.telaHorarios{
 }
 
 div.opcoesHorarios{
-    margin: 0 25px 117px 25px;
+    margin: 0 25px 210px 25px;
 }
 
 div.opcaoHorario{
