--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,323 +1,57 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-*{
-    box-sizing: border-box;
-    --cor-branca: #FFFFFF;
-    --cor-header: #C3CFD9;
-    --cor-footer: #DFE6ED;
-    --cor-texto: #293845;
-    --cor-laranja: #E8833A;
+* {
+  box-sizing: border-box;
+  --cor-branca: #ffffff;
+  --cor-header: #c3cfd9;
+  --cor-footer: #dfe6ed;
+  --cor-texto: #293845;
+  --cor-laranja: #e8833a;
 }
 
-html, body{
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
-body{
-    font-family: 'Roboto', sans-serif;
-    color: var(--cor-texto);
+body {
+  font-family: "Roboto", sans-serif;
+  color: var(--cor-texto);
 }
 
-div.root{
-    width: 100%;
-    height: 100%;
+div.root {
+  width: 100%;
+  height: 100%;
 }
 
-div.header{
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 67px;
-    background-color: var(--cor-header);
-    color: var(--cor-laranja);
+div.selecionado {
+  background-color: #8dd7cf;
+  border: 1px solid #1aae9e;
 }
 
-div.header h1{
-    font-size: 34px;
-    text-decoration: none;
+div.disponivel {
+  background-color: var(--cor-header);
+  border: 1px solid #808f9d;
 }
 
-div.voltar{
-    position: fixed;
-    left: 10px;
-    top: 13px;
-    z-index: 1;
+div.indisponivel {
+  background-color: #fbe192;
+  border: 1px solid #f7c52b;
 }
 
-div.telaFilmes{
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-    margin-top: 67px;
+div.voltar {
+  position: fixed;
+  left: 10px;
+  top: 13px;
+  z-index: 1;
 }
 
-div.caixaFilmes{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin: 0 20px;
-    margin-bottom: 75px;
-}
-
-div.capaFilme{
-    width: 129px;
-    height: 193px;
-    margin: 8px;
-    border-radius: 5px;
-}
-
-div.capaFilme:hover{
-    cursor: pointer;
-    filter: brightness(0.6);
-}
-
-div.capaFilme img{
-    width: 129px;
-    height: 193px;
-    object-fit: cover;
-    border-radius: 5px;
-}
-
-div.telaHorarios{
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-    margin-top: 67px;
-}
-
-div.opcoesHorarios{
-    margin: 0 25px 210px 25px;
-}
-
-div.opcaoHorario{
-    margin-bottom: 25px;
-}
-
-div.opcaoHorario p{
-    margin-bottom: 25px;
-    font-size: 20px;
-}
-
-div.telaAssentos{
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-    margin-top: 67px;
-}
-
-div.assentos{
-    margin: 0 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-div.assentos p{
-    font-size: 12px;
-}
-
-div.assentos div{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 30px;
-    height: 30px;
-    border-radius: 35px;
-    margin: 9px 5px;
-}
-
-div.assentos div:hover{
-    cursor: pointer;
-    filter: brightness(0.6);
-}
-
-div.classificacaoAssentos{
-    margin: 20px 56px 0px 56px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-div.classeAssento{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;   
-}
-
-div.classeAssento div{
-    width: 30px;
-    height: 30px;
-    border-radius: 30px;
-    margin-bottom: 6px;
-}
-
-div.classeAssento p{
-    font-size: 13px;
-    color: #4E5A65;
-}
-
-div.selecionado{
-    background-color: #8DD7CF;
-    border: 1px solid #1AAE9E;
-}
-
-div.disponivel{
-    background-color: var(--cor-header);
-    border: 1px solid #808F9D;
-}
-
-div.indisponivel{
-    background-color: #FBE192;
-    border: 1px solid #F7C52B;
-}
-
-form{
-    margin: 45px 25px 220px 25px;
-}
-
-form div{
-    margin-bottom: 7px;
-    display: flex;
-    flex-direction: column;
-}
-
-label{
-    font-size: 18px;
-    margin-bottom: 8px;
-}
-
-input{
-    width: 100%;
-    height: 51px;
-    border: 1px solid #D4D4D4;
-    font-size: 18px;
-    color: #AFAFAF;
-    padding: 0 18px;
-    font-style: italic;
-    margin-bottom: 10px;
-    border-radius: 3px;
-}
-
-div.telaPedido{
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-    margin-top: 67px;
-}
-
-div.telaPedido h4{
-    text-align: center;
-    font-size: 24px;
-    font-weight: bold;
-    color: #247A6B;
-    margin: 35px 70px;
-}
-
-div.telaPedido div.escolha{
-    margin: 15px 28px;
-}
-
-div.escolha h5{
-    font-weight: bold;
-    line-height: 35px;
-    font-size: 24px;
-}
-
-div.escolha p{
-    font-size: 22px;
-    line-height: 28px;
-}
-
-
-div.caixaTituloTela{
-    height: 110px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-h2.tituloTela{
-    font-size: 24px;
-}
-
-button.button{
-    border: none;
-    background-color: var(--cor-laranja);
-    color: var(--cor-branca);
-    font-size: 18px;
-    height: 43px;
-    border-radius: 3px;
-    padding: 0 15px;
-    margin-right: 10px;
-}
-
-button.button:hover{
-    cursor: pointer;
-    filter: brightness(0.6);
-}
-
-div.buttonText{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 50px;
-    padding: 0 15%;
-}
-
-div.footer{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 117px;
-    background-color: var(--cor-footer);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-top: 1px solid #9EADBA;
-}
-
-div.filmeSelecionado{
-    width: 25%;
-    display: flex;
-    align-items: center;
-    justify-content: right;
-}
-
-div.filmeSelecionado div{
-    width: 64px;
-    height: 89px;
-    background-color: var(--cor-branca);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-div.filmeSelecionado img{
-    width: 48px;
-    height: 72px;
-    object-fit: cover;
-}
-
-div.tituloFilmeSelecionado{
-    width: 70%;
-}
-
-div.tituloFilmeSelecionado h3{
-    font-size: 22px;
-    text-align: left;
-    line-height: 30px;
-}
-
-.escondido{
-    display: none;
+div.buttonText {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  padding: 0 15%;
 }
